Update file paths to use dist directory

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="src/assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="dist/favicon.2a2e97fc.png" />
 
     <!-- Todo: put here your site title -->
     <title>Nguyễn Trần Trọng Nguyên | Developer</title>
@@ -28,7 +28,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="src/styles.scss" />
+    <link rel="stylesheet" href="dist/tronnguyn07.github.io-main.4a508c1d.css" />
     <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="/src/assets/223.jpg"
+                src="dist/223.310f8dbd.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -148,7 +148,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="src/assets/image.png"
+                      src="dist/image.513edb25.png"
                     />
                   </div>
                 </a>
@@ -200,7 +200,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="src/assets/chess.png"
+                      src="dist/chess.a50e09bc.png"
                     />
                   </div>
                 </a>
@@ -252,7 +252,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="src/assets/weather.png"
+                      src="dist/weather.3119db68.png"
                     />
                   </div>
                 </a>
@@ -313,6 +313,6 @@
     </footer>
     <!-- /END Footer Section -->
 
-    <script defer type="module" src="src/index.js"></script>
+    <script defer type="module" src="dist/tronnguyn07.github.io-main.31b563d9.js"></script>
   </body>
 </html>
